fix: content jump

--- a/src/components/Skeleton/index.module.scss
+++ b/src/components/Skeleton/index.module.scss
@@ -1,16 +1,10 @@
 .skeleton {
     box-sizing: border-box;
     display: flex;
-    width: 730px;
-    height: 573px;
-    padding: 60px 40px;
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    border-radius: 16px;
-    background: var(--Main-White, #FFF);
-    box-shadow: 0px 0px 0px 0px rgba(23, 55, 86, 0.06), 0px 2px 4px 0px rgba(34, 70, 107, 0.04), 0px 7px 7px 0px rgba(33, 72, 111, 0.05);
-    font-family: var(--font-jakarta);
 }
 
 .row {
@@ -21,6 +15,7 @@
     &:last-child {
         .item {
             width: 25%;
+            height: 64px;
         }
     }
 }
