--- a/src/slices/Footer/index.module.scss
+++ b/src/slices/Footer/index.module.scss
@@ -5,4 +5,8 @@
     font-style: normal;
     font-weight: 300;
     line-height: 170%;
+    margin-top: auto;
+    @media screen and (max-width: 760px) {
+        padding-left: 0;
+    }
 }
