--- a/src/slices/HubspotForm/index.module.scss
+++ b/src/slices/HubspotForm/index.module.scss
@@ -1,17 +1,23 @@
 .section {
     display: flex;
     justify-content: center;
-    flex: 1;
+    .content {
+        display: flex;
+        width: 730px;
+        padding: 60px 40px;
+        background: var(--Main-White, #FFF);
+        box-shadow: 0px 0px 0px 0px rgba(23, 55, 86, 0.06), 0px 2px 4px 0px rgba(34, 70, 107, 0.04), 0px 7px 7px 0px rgba(33, 72, 111, 0.05);
+        font-family: var(--font-jakarta);
+        border-radius: 16px;
+        box-sizing: border-box;
+
+        @media screen and (max-width: 600px) {
+            padding: 30px 20px;
+        }
+    }
     :global {
         #hubspot-form-wrapper {
-            display: flex;
-            width: 730px;
-            padding: 60px 40px;
-            background: var(--Main-White, #FFF);
-            box-shadow: 0px 0px 0px 0px rgba(23, 55, 86, 0.06), 0px 2px 4px 0px rgba(34, 70, 107, 0.04), 0px 7px 7px 0px rgba(33, 72, 111, 0.05);
-            font-family: var(--font-jakarta);
-            border-radius: 16px;
-            box-sizing: border-box;
+            width: 100%;
         }
         .hs-form {
             box-sizing: border-box;
