--- a/src/slices/RichText/index.module.scss
+++ b/src/slices/RichText/index.module.scss
@@ -13,7 +13,11 @@
     margin-bottom: 25px;
     margin-top: 100px;
     max-width: 720px;
-
+    @media screen and (max-width: 600px) {
+      font-size: 30px;
+      line-height: 40px; 
+      margin-top: 30px;
+    }
   }
   p {
     color: #000;
@@ -25,5 +29,10 @@
     margin: 0;
     margin-bottom: 60px;
     max-width: 516px;
+    @media screen and (max-width: 600px) {
+      font-size: 16px;
+      line-height: 20px; 
+      margin-bottom: 30px;
+    }
   }
 }
