--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,15 @@
 body {
     background-color: var(--Main-Sand, #F5F7FB);
+   
+    margin: 0;
+    padding: 0;
+}
+
+.content {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    @media screen and (max-width: 760px) {
+        padding: 0 15px
+    }
 }
